[tool.poetry]
name = "pyselect"
version = "0.1.0"
description = "A package for feature importances in kernel methods."
license = "MIT"
readme = "README.md"
keywords = ["Machine learning", "Variable selection"]
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.22.2"
scikit-learn = "^1.1.1"
torch = "^1.13.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyselect"]

[tool.coverage.report]
show_missing = true
fail_under = 100
