[tool.poetry]
name = "pyselect"
version = "0.1.0"
description = "A package for feature importances in kernel methods."
license = "MIT"
readme = "README.md"
keywords = ["Machine learning", "Variable selection"]
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
scikit-learn = "^1.1.1"
torch = { version = "1.13.0", source = "torch" }
pandas = "^1.5.2"
optuna = "^3.0.4"
xgboost = "^1.7.2"
umap-learn = "^0.5.3"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
requests = "^2.28.1"
nltk = "^3.7"
pygam = "^0.8.0"
jupyterlab = "^3.6.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu/"
secondary = true

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyselect"]

[tool.coverage.report]
show_missing = true
fail_under = 100
